# clinica-pydra-fsl

./: .gitignore  README.md  hatch.toml  pyproject.toml
.github/workflows/: docs.yaml  test.yaml
docs/: index.rst
pydra/tasks/fsl/: __init__.py  flirt.py  fnirt.py
src/pydra/tasks/fsl/: __init__.py  fast.py  maths.py  susan.py
src/pydra/tasks/fsl/bet/: __init__.py  bet.py  robustfov.py
src/pydra/tasks/fsl/eddy/: __init__.py  applytopup.py  eddy.py
src/pydra/tasks/fsl/flirt/: __init__.py  convertxfm.py  flirt.py  img2imgcoord.py  img2stdcoord.py  specs.py  std2imgcoord.py
src/pydra/tasks/fsl/fnirt/: __init__.py  applywarp.py  convertwarp.py  fnirt.py  fnirtfileutils.py  invwarp.py  specs.py
src/pydra/tasks/fsl/fugue/: __init__.py  fugue.py  prelude.py  sigloss.py
src/pydra/tasks/fsl/utils/: __init__.py  chfiletype.py  fslcpgeom.py  merge.py  orient.py  reorient2std.py  roi.py  selectvols.py  swapdim.py
